samples/_failures_safe/1761524117_a8a031_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bd8dfb6.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_4bd8dfb6.c:140:49: error: expected declaration or statement at end of input
  140 | void executeAlgorithm(struct Graph *graph, enum Algorithm algo, int start) {
      |                                                 ^~~~~~~~~
